2009-02-21  Ingo Renner  <ingo@typo3.org>

	* Follow-up for bug #9705: Moving page in WS will hide it from editors due to missing access settings of placeholder (thanks to Marcus Krause)

2009-02-20  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #10451: Fixed flaws in PATH_INFO check for simulateStaticDocuments

2009-02-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8905: option+space for inserting non-braking space on Mac OSX does not work properly

2009-02-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10482: htmlArea RTE: Find & replace sometimes leaves marks in the content

2009-02-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10453: Wrong text for "upload file" in link popup

2009-02-18  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10451: Evaluation PATH_INFO in tslib_fe::checkAlternativeIdMethods() sets false positives

2009-02-17  Jeff Segars <jeff@webempoweredchurch.org>

	* Fixed bug #10256: Remove references to gzip encode from File and Access modules (thanks to Thomas Hempel, backport from trunk patch by Dmitry Dulepov)

2009-02-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #5548: cli_dispatch.phpsh will not run on CGI API (Thanks to Steffen Gebert)

2009-02-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9805: RTE and DAM element browsers show wrong colours

2009-02-10  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.6

2009-02-10  Michael Stucki  <michael@typo3.org>

	* Fixed bug #10364: Jumpurl feature allows to access arbitrary files on a server (thanks to the TYPO3 Security Team and especially Marcus Krause)
	* Fixed bug #10298: Various XSS issues in the BE user admin module (thanks to Jelmer de Hen and Dmitry Dulepov)

2009-02-08  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #9861: Second page of results in list-module with ordering flaw (credits Christian Kuhn)

2009-02-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 1.7.9 for TYPO3 4.2.6
