@@ -1,3 +1,7 @@
+2009-02-27  Francois Suter  <francois@typo3.org>
+
+	* Fixed bug #10313: Fileadmin-module wrongly allows creation of trailing dot directories on UTF8 FS (Thanks to Steffen Gebert)
+
 2009-02-21  Ingo Renner  <ingo@typo3.org>
 
 	* Follow-up for bug #9705: Moving page in WS will hide it from editors due to missing access settings of placeholder (thanks to Marcus Krause)
